perf(core): 优化数据结构以提高并发性能
- 将 Collections.synchronizedList 替换为 CopyOnWriteArrayList，以减少读取时的同步开销
- 使用 ConcurrentLinkedDeque 替代 synchronized List，以提高并发访问性能
- 移除不必要的同步包装，减少冗余代码